--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width, initial-scale=1.0">
     <title>QR CODE COMPONENT</title>
-    <link rel="stylesheet" href="style.css">
+    <link
+    rel="STYLESHEET"
+    href="style.css"/>
 </head>
 <body>
-    <h1>QR CODE COMPONENT</h1>
+<div class="card">
+    <div class="card-img-container">
+        <img
+         src="image/image.jpg"
+         alt="image.jpg"
+         class="card-img" 
+         />
+    </div>-
+    <h1 class="card-heading">Improve your Front-end skills by building projects</h1>
+    <p class="card-para">Scan the QR code to visit frontend mentor and take your coding skills to the next level </p>
+</div>
+
+
+
+
+
     
 </body>
 </html>
