modify file path from absolute to relevant

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>QR CODE COMPONENT</title>
     <link
     rel="STYLESHEET"
-    href="style.css"/>
+    href="./style.css"/>
 </head>
 <body>
 <div class="card">
     <div class="card-img-container">
         <img
-         src="image/image.jpg"
+         src="./image/image.jpg"
          alt="image.jpg"
          class="card-img" 
          />
